# LedMatrixBoardDriver

extra_feature/led_board/: Cargo.toml
extra_feature/led_board/letter_matrices/:  _16.txt  !_16.txt  0_16.txt  1_16.txt  2_16.txt  3_16.txt  4_16.txt  5_16.txt  6_16.txt  7_16.txt  8_16.txt  9_16.txt  A_16.txt  B_16.txt  C_16.txt  D_16.txt  E_16.txt  F_16.txt  G_16.txt  H_16.txt  I_16.txt  J_16.txt  K_16.txt  L_16.txt  M_16.txt  N_16.txt  O_16.txt  P_16.txt  Q_16.txt  R_16.txt  S_16.txt  T_16.txt  U_16.txt  V_16.txt  W_16.txt  X_16.txt  Y_16.txt  Z_16.txt
extra_feature/led_board/src/: main.rs
extra_feature/python/: char_to_pixel_generator.py
rust_project/: Cargo.toml  README.md  notes.txt
rust_project/src/: main.rs
