[package]
name = "led_board"
version = "0.1.0"
authors = ["RobbeRDG <robbedegroeve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2"
time="0.2"
ctrlc="3.1.8"
simple-error="0.2.3"
shuteye="0.3.3"
mmap="0.1.1"
nix="0.20.0"
byteorder = "1"

